2004-05-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/percent-repeat-engraver.cc (try_music): add moments for
	barlines too. Fixes: skipbars-percent-repeat.ly.

2004-05-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/context-def.cc (filter_performers): don't go to cdrloc if
	skipping last pair. Fixes: crash-bar-number.

	* scm/fret-diagrams.scm (nil): fret-diagrams (courtesy Carl
	D. Sorensen)

	* input/test/fret-diagram.ly: new file.

	* scm/paper.scm (paper-set-staff-size): scale linewidth too.
	(scale-paper): divide by scale.

2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): also do nothing for the (0,2)
	case.

2004-05-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/stencil.scm (fontify-text): reinstate function

	* tex/lily-ps-defs.tex: remove lilypondblotdiam def.

	* lily/book-paper-def.cc (Book_paper_def): add copy ctor.

	* lily/parser.yy (book_paper_head): \bookpaper {} 

	* python/midi.c: remove config.h

2004-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Update.

2004-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: New file.

	* lily/include/book-paper-def.hh: Add.  Janitorial fixes.

2004-05-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/book-paper-def.cc (ly_bookpaper_fonts): move from Paperdef
	(find_scaled_font): move from Paper_def

2004-05-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/my-lily-parser.cc (LY_DEFINE): new function ly_parser_lookup
	(LY_DEFINE): add SCM_ASSERT_TYPE everywhere.

	* po/fr.po: update po.

	* lily/include/book-paper-def.hh (class Book_paper_def): new file.

	* lily/book-paper-def.cc (print_smob): new file.

2004-05-16  Heikki Junes <hjunes@cc.hut.fi>

	* buildscripts/lilypond-words.py: search words also from
	music-functions-init.ly.

2004-05-15  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* ly/music-functions-init.ly (def-music-function): new helper
	macro for defining music functions. \addlyrics \appoggiatura