@@ -1,3 +1,9 @@
+2004-05-25  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/fret-diagrams.scm: Add header.
+
+	* scm/output-gnome.scm: Hello world :-)
+
 2004-05-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/percent-repeat-engraver.cc (try_music): add moments for
